// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shares routes createShare createShare db error 1`] = `
Array [
  Array [
    "ctx.request.body:",
    Object {
      "recipientRefIds": Array [
        "teacherA2",
        "teacherA3B1",
      ],
    },
  ],
  Array [
    "recipientRefIds:",
    Array [
      "teacherA2",
      "teacherA3B1",
    ],
  ],
]
`;

exports[`shares routes createShare createShare db error 2`] = `"Apparently something went wrong...123"`;

exports[`shares routes createShare createShare success 1`] = `
Array [
  Array [
    "ctx.request.body:",
    Object {
      "recipientRefIds": Array [
        "teacherA2",
        "teacherA3B1",
      ],
    },
  ],
  Array [
    "recipientRefIds:",
    Array [
      "teacherA2",
      "teacherA3B1",
    ],
  ],
  Array [
    "--------------->",
    Object {
      "assetRefId": "plan2",
      "assetType": "PLAN",
      "createdDate": "2019-03-05T21:51:50.609Z",
      "recipients": Array [
        "teacherA1",
        "teacherA2",
      ],
      "sharerRefId": "teacherA3B1",
      "tenantRefId": "districtA",
    },
  ],
]
`;

exports[`shares routes getShares getShares db error 1`] = `
Array [
  Array [
    "params-->",
    Object {
      "assetType": "PLAN",
      "tenantRefId": "districtA",
      "userRefId": "teacherA2",
    },
  ],
]
`;

exports[`shares routes getShares getShares db error 2`] = `"Apparently something went wrong...123"`;

exports[`shares routes getShares getShares success 1`] = `
Array [
  Array [
    "params-->",
    Object {
      "assetType": "PLAN",
      "tenantRefId": "districtA",
      "userRefId": "teacherA2",
    },
  ],
]
`;
